# NotesRUs

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  argocd.yaml  ci.Dockerfile  database.dbml  database.sqlite
.github/workflows/: Docker_Build.yaml  Push_master.yaml
kubernetes/: 0-namespace.yaml  1-cnpg.yaml  1-persistent-volume.yaml  1-service-account.yaml  2-cnpg-pooler.yaml  3-deployment.yaml  3-hanko-cm.yaml  4-app-creds.yaml  4-deployment.yaml  5-deployment.yaml  5-ingress.yaml  6-ingress.yaml  6-service.yaml  7-ingress.yaml  README.md
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20220101_000001_users_table.rs  m20240726_065639_clients_table.rs  m20240727_035016_follows_table.rs  m20240727_061854_posts_table.rs  m20240727_063114_comments_table.rs  m20240729_222557_foreign_keys.rs  m20240816_001629_otp_codes_table.rs  main.rs
notes_r_us_ui/: Cargo.toml  README.md  index.html  package-lock.json  package.json  tailwind.config.js
notes_r_us_ui/src/: App.vue  app.rs  main.js  router.js  style.css
notes_r_us_ui/src/components/: BrowseFiles.vue  DeleteFile.vue  DownloadFile.vue  Editor.vue  FileUpload.vue  Landing.vue  PreviewFile.vue  Sidebar.vue  introTour.vue
notes_r_us_ui/src/views/: browse.vue  delete.vue  download.vue  preview.vue  upload.vue
src/: cli.rs  lib.rs  main.rs
src/backend/: auth.rs  mod.rs
src/backend/auth/: check.rs  mod.rs  security_scheme.rs
src/backend/requests/: post.rs
src/backend/responses/: mod.rs  post.rs  user.rs
src/database/: setup.rs
src/entities/: mod.rs  prelude.rs  users.rs
src/entity/: clients.rs  comments.rs  follows.rs  mod.rs  otp_codes.rs  posts.rs  prelude.rs  users.rs
