[package]
name = "notes_r_us"
version = "1.0.0"
edition = "2021"


[dependencies]

poem = { version = "3.0.1", features = ["static-files", "multipart", "tempfile"] }
poem-openapi = { version = "5.0.2", features = ["swagger-ui", "openapi-explorer"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
swagger = "6.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.4"