[package]
name = "notes_r_us"
version = "1.0.0"
edition = "2021"
description = "Notes R Us Api Server\n\nThis is a application built for the elite note takers."


[dependencies]

poem = { version = "3.0.1", features = ["static-files", "multipart", "tempfile"] }
poem-openapi = { version = "5.0.2", features = ["swagger-ui", "openapi-explorer"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
swagger = "6.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.4"
serde_json = "1.0.117"
chrono = "0.4.38"
chrono-tz = "0.9.0"
sea-orm = { version = "0.12.15", features = ["runtime-tokio-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite"] }
