[package]
name = "notes_r_us"
version = "0.3.0"
edition = "2021"
readme = "README.md"
homepage = "https://notesrus.nzdev.org"
authors = ["Liam Tietjens <liam@nzdev.org>", "Zac S (Ellozac) <zlsy108@gmail.com>", "Yuri P (yPiuro)"]
repository = "https://github.com/l2dit/notesrus.git"
license-file = "LICENSE"
keywords = ["Api", "Notes", "Database"]


[workspace]
members = [".", "migration"]

[dependencies]
swagger = "6.4.1"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.4"
serde_json = "1.0.117"
chrono = "0.4.38"
chrono-tz = "0.9.0"
migration = { path = "migration", version = "^0.1.0"}

[dependencies.poem]
version = "3.0.1"
features = [
	"static-files",
	"multipart",
	"tempfile"
]

[dependencies.poem-openapi]
version = "5.0.2"
features = [
	"swagger-ui",
	"openapi-explorer"
]

[dependencies.clap]
version = "4.5.4"
features = [
	"derive",
	"env"
]

[dependencies.sea-orm]
version = "0.12.15"
features = [
	"runtime-tokio-rustls",
	"sqlx-mysql",
	"sqlx-postgres",
	"sqlx-sqlite"
]
