[package]
name = "notes_r_us_migration"
version = "0.1.0"
edition = "2021"
readme = "README.md"
description = "Database Migrations For Notesrus"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
license-file.workspace = true
keywords.workspace = true
authors.workspace = true

[lib]
name = "notes_r_us_migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "1", features = ["attributes", "tokio1"] }

[dependencies.sea-orm-migration]
version = "0.12.0"
features = ["runtime-async-std-rustls", "sqlx-mysql", "sqlx-postgres", "sqlx-sqlite", "with-chrono"]
